<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maria.mariamihucoopculminating.adminHomepage">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/adminWelcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/adminGreeting"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TableLayout
            android:layout_width="395dp"
            android:layout_height="587dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="10dp"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tableLayout3">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp">

                <Button
                    android:id="@+id/editScheduleButton"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_green_light"
                    android:text="@string/firstAdminButton" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp">

                <Button
                    android:id="@+id/editCamperInfoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_green_light"
                    android:onClick="gotoEditCamper"
                    android:text="@string/secondAdminButton" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp">

                <Button
                    android:id="@+id/NewRegistration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_red_dark"
                    android:text="@string/thirdAdminButton" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp">

                <Button
                    android:id="@+id/counsellorUpdateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_green_light"
                    android:onClick="gotoEditCounsellors"
                    android:text="@string/fourthAdminButton" />
            </TableRow>

        </TableLayout>
    </android.support.constraint.ConstraintLayout>



