<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maria.mariamihucoopculminating.editCounsellorInfo">

         <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="70dp"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/prompt4FN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstName"
                    android:textColor="@android:color/background_dark"
                    android:textSize="17sp"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="307dp" />

                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/emptyString" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/prompt4LN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastName"
                    android:textColor="@android:color/background_dark"
                    android:textSize="17sp"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="307dp" />

                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/emptyString" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/ageheader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Age"
                    android:textColor="@android:color/background_dark"
                    android:textSize="17sp"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="428dp" />

                <EditText
                    android:id="@+id/ageC"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/emptyString" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/positionheader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/position"
                    android:textColor="@android:color/background_dark"
                    android:textSize="17sp"
                    tools:layout_editor_absoluteX="204dp"
                    tools:layout_editor_absoluteY="500dp" />

                <EditText
                    android:id="@+id/positionC"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/emptyString" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/needthislater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/booleanForSQL"
                    android:textColor="@android:color/background_dark"
                    android:textSize="13sp"
                    tools:layout_editor_absoluteX="204dp"
                    tools:layout_editor_absoluteY="500dp" />

                <Spinner
                    android:id="@+id/loginPermission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/allergyheader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Allergies"
                    android:textColor="@android:color/background_dark"
                    android:textSize="17sp"
                    tools:layout_editor_absoluteX="259dp"
                    tools:layout_editor_absoluteY="347dp" />

                <EditText
                    android:id="@+id/allergiesC"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/emptyString" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editedAdminNotes"
                    android:textColor="@android:color/background_dark"
                    android:textSize="17sp"
                    tools:layout_editor_absoluteX="259dp"
                    tools:layout_editor_absoluteY="347dp" />

                <EditText
                    android:id="@+id/extraC"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/emptyString" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">


                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:text="@string/otherbuttonadmincouns"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/sendtoSQL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_red_dark"
                    android:onClick="sendtoSQL"
                    android:text="@string/textForSaveButton" />
            </TableRow>

        </TableLayout>

    <TextView
        android:id="@+id/headerrr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/header4admincouns"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>