<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maria.mariamihucoopculminating.adminDatabase">

    <TableLayout
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CamperName"
                android:textColor="@android:color/background_dark"
                android:textSize="17sp"
                tools:layout_editor_absoluteX="86dp"
                tools:layout_editor_absoluteY="307dp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyString" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/ageheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Age"
                android:textColor="@android:color/background_dark"
                android:textSize="17sp"
                tools:layout_editor_absoluteX="86dp"
                tools:layout_editor_absoluteY="428dp" />

            <EditText
                android:id="@+id/age"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyString" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/allergyheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Allergies"
                android:textColor="@android:color/background_dark"
                android:textSize="17sp"
                tools:layout_editor_absoluteX="204dp"
                tools:layout_editor_absoluteY="500dp" />

            <EditText
                android:id="@+id/allergy"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyString" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/siblingsheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Siblings"
                android:textColor="@android:color/background_dark"
                android:textSize="17sp"
                tools:layout_editor_absoluteX="259dp"
                tools:layout_editor_absoluteY="347dp" />

            <EditText
                android:id="@+id/siblings"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyString" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textView39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editedAdminNotes"
                android:textColor="@android:color/background_dark"
                android:textSize="17sp"
                tools:layout_editor_absoluteX="259dp"
                tools:layout_editor_absoluteY="347dp" />

            <EditText
                android:id="@+id/extra"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyString" />

            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/headerrr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/header4admin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />


</android.support.constraint.ConstraintLayout>
